# oxidant

./: .gitignore  README.md  idiom_dictionary.md  oxidant.config.json  pyproject.toml
corpora/msagl-rs/: CLAUDE.md
docs/: OXIDANT_PRD.md  index.html
docs/superpowers/plans/: 2026-04-15-phase-a-analysis-pipeline.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.vue  api.ts  main.css  store.ts
gui/src/components/: ConfirmModal.vue  LiveNodeFeed.vue  ProgressDashboard.vue  ReviewPanel.vue  ReviewQueuePanel.vue  RunConfigPanel.vue  RunControls.vue  TerminalPanel.vue
gui/src/composables/: useConfirm.ts  useNeonFlicker.ts  useResize.ts  useRunActions.ts
oxidant/: cli.py
phase_a_scripts/: detect_idioms.ts  extract_ast.ts
src/oxidant/: cli.py
src/oxidant/agents/: context.py  invoke.py
src/oxidant/analysis/: classify_tiers.py  generate_skeleton.py  hierarchy.py
src/oxidant/assembly/: assemble.py
src/oxidant/graph/: graph.py  nodes.py  state.py
src/oxidant/integration/: integration_debug.py
src/oxidant/models/: db.py  manifest.py
src/oxidant/refinement/: categorize.py  clippy_runner.py  phase_c.py
src/oxidant/serve/: app.py  events.py  run_manager.py
src/oxidant/verification/: verify.py
tests/: test_assemble.py  test_classify_tiers.py  test_clippy_runner.py  test_context.py  test_generate_skeleton.py  test_graph_nodes.py  test_integration_debug.py  test_invoke.py  test_manifest.py  test_manifest_phase_b.py  test_phase_c.py  test_serve_endpoints.py
